--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.3.5"
+    "react-fast-marquee": "^1.3.5",
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
