--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-SHORTENER_ENDPOINT=
-SHORTENER_USERNAME=
-SHORTENER_PASSWORD=
+VITE_SHORTENER_ENDPOINT= # do not add ending "/"
+VITE_SHORTENER_USERNAME=
+VITE_SHORTENER_PASSWORD=
