--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/admin",
-      "destination": "/admin"
+      "source": "/(.*)",
+      "destination": "/$1"
     }
   ]
 }
